--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,7 @@
 databaseChangeLog:
   - include:
       file: db/changelog/changes/db.changelog-create-table-conta-a-pagar.yaml
+  - include:
+      file: db/changelog/changes/db.changelog-create-table-acrescimo.yaml
+  - include:
+      file: db/changelog/changes/db.changelog-insert-acrescimo.yaml
